Changed port to 8080

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-api",
   "version": "1.0.0",
   "description": "A node api for interacting with fixer.io api",
+    "engines": {
+    "node": "7.0.0"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
